[gd_scene load_steps=2 format=3 uid="uid://brw4gii2o2c5q"]

[ext_resource type="Script" path="res://scene/main.gd" id="1_er1sb"]

[node name="Main" type="Node2D"]
script = ExtResource("1_er1sb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VictoryPanel" type="Panel" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(600, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/VictoryPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 38.0
offset_right = 50.0
offset_bottom = 107.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "过关"

[node name="Next" type="Button" parent="CanvasLayer/VictoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "下一关"

[node name="VictoryPanel2" type="Panel" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(600, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/VictoryPanel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 38.0
offset_right = 50.0
offset_bottom = 107.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "通关"

[node name="Next" type="Button" parent="CanvasLayer/VictoryPanel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "返回主菜单"

[node name="Toolbar" type="HBoxContainer" parent="CanvasLayer"]
visible = false
offset_left = 96.0
offset_right = 342.0
offset_bottom = 77.0
theme_override_constants/separation = 30

[node name="ToMap" type="Button" parent="CanvasLayer/Toolbar"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "选关"

[node name="Refresh" type="Button" parent="CanvasLayer/Toolbar"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "刷新"

[node name="ToEntry" type="Button" parent="CanvasLayer/Toolbar"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "返回主菜单"

[connection signal="pressed" from="CanvasLayer/VictoryPanel/Next" to="." method="next"]
[connection signal="pressed" from="CanvasLayer/VictoryPanel2/Next" to="." method="to_entry"]
[connection signal="pressed" from="CanvasLayer/Toolbar/ToMap" to="." method="to_map"]
[connection signal="pressed" from="CanvasLayer/Toolbar/Refresh" to="." method="refresh"]
[connection signal="pressed" from="CanvasLayer/Toolbar/ToEntry" to="." method="to_entry"]
